--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - DOCKER_API_VERSION=1.35
       - OVERRIDE_VIDEO_OUTPUT_DIR=$PWD/video
       - LIMIT=10
-    command: ["-conf", "/etc/selenoid/browsers.json", "-video-output-dir", "/opt/selenoid/video", "-limit", "10", "-session-delete-timeout", "10s"]
+    command: ["-conf", "/etc/selenoid/browsers.json", "-video-output-dir", "/opt/selenoid/video", "-limit", "10", "-session-delete-timeout", "10s", "-timeout", "20s"]
 
   selenoid-ui:
     image: "aerokube/selenoid-ui"
